# hopscotch-compliance

./: .gitignore  index.html  package-lock.json  package.json  supabase-incidentiq-schema.sql  tailwind.config.js
api/: analyze-incident.js  analyze-witness-statement.js  brainstorm-hazards.js  generate-assessment.js  generate-docx.js  review-evidence.js
public/templates/: hopscotch_risk_assessment_template.docx
src/: App.jsx  index.css
src/components/: ChecklistItem.jsx  ConfirmationCard.jsx  Header.jsx  Logo.jsx  PasswordGate.jsx  SignatureCanvas.jsx  SummaryEntry.jsx  SwipeCard.jsx  WeeklyDivider.jsx
src/components/incident/: IncidentOverview.jsx
src/components/ui/: AIAnalysis.jsx  Accordion.jsx  Alert.jsx  Badge.jsx  Button.jsx  Card.jsx  Checkbox.jsx  FileUpload.jsx  (+8 more)
src/data/: checklists.js  config.js  nurseries.js  rooms.js
src/hooks/: useChecklist.js
src/lib/: aiAnalysis.js  generatePdf.js  incidentDb.js  notificationDrafts.js  riskAssessmentAi.js  riskAssessmentDb.js  storage.js  supabase.js  utils.js
src/pages/: CheckSetup.jsx  Checklist.jsx  Confirmation.jsx  History.jsx  Home.jsx  Issues.jsx  KitchenSafety.jsx  KitchenSection.jsx  RequestRecords.jsx  RoomProgress.jsx  Summary.jsx  SwipeChecklist.jsx
tools/risk-assessment-generator/: .gitignore  pyproject.toml  requirements.txt  run.py
tools/risk-assessment-generator/src/risk_assessment_generator/: __init__.py  cli.py  document_generator.py  hazard_identifier.py  models.py  web.py
tools/risk-assessment-generator/src/risk_assessment_generator/templates/: base.html  index.html  result.html
(+18 files in other folders)
